[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
etherparse = "0.19.0"
number_prefix = "0.4.0"
pcap-file = "2.0.0"
pcap-parser = "0.17.0"
rust_decimal = { version = "1.41.0", features = ["maths"] }
rust_decimal_macros = "1.40.0"
scopeguard = "1.2.0"
tabled = "0.20.0"
